<resources>
    <string name="app_name">TIH Talks</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_title">Name</string>
    <string name="password_title">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="new_user_title">New user?</string>
    <string name="sign_in_to_continue_title">Sign in to continue</string>
    <string name="welcome_back_title">Welcome back,</string>
    <string name="password_again_title">Password (again)</string>
    <string name="error_invalid_name_or_password">Invalid name or password</string>
    <string name="fragment_title_login">TIH Talks</string>
    <string name="fragment_title_signup">Sign-up</string>
    <string name="about_text_1">TrueItHub Talks — simple messenger, pet-project to improve programming skills and learn new technologies, so minor bugs or errors can occur (feel free to contact me)</string>
    <string name="about_text_2">Technologies used: Retrofit, OkHttp, WebSockets, MVVM, Navigation Component, Picasso, Ktor</string>
    <string name="source_app">App source</string>
    <string name="source_api">API source</string>
    <string name="lorem_ipsum_very_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam quis porttitor nisl. Maecenas augue quam, facilisis ac magna ac, hendrerit massa. Praesent sodales semper mi et posuere. Duis semper suscipit imperdiet. Aenean finibus egestas sem ac maximus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tristique, arcu bibendum vulputate ultrices, massa eros faucibus est, a aliquam ante sem et arcu. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Interdum et malesuada fames ac ante ipsum primis in faucibus. In hac habitasse platea dictumst. Maecenas rutrum gravida tristique. Quisque commodo sollicitudin mi, quis ullamcorper risus ultrices nec. Aliquam non sodales leo, in aliquet enim. Sed diam lorem, mollis non tellus cursus, tristique porttitor odio. Suspendisse elit leo, dictum eu egestas sagittis, posuere eu massa. Vestibulum neque turpis, tempor at eros non, bibendum lacinia mi.
        Morbi finibus mauris ipsum. Morbi at lorem vitae nunc molestie scelerisque porttitor ut elit. Suspendisse vel leo sed diam mollis dapibus sed quis purus. Donec pharetra pellentesque neque eget placerat. Ut sit amet lectus sed tortor dictum ullamcorper. Quisque vitae arcu molestie, convallis justo sed, lobortis quam. Maecenas vitae massa et augue tristique sagittis. Vivamus magna diam, commodo nec diam ut, aliquet condimentum ante. Phasellus eget sapien quis nisi interdum convallis sit amet at eros. Duis aliquam vehicula ipsum, id accumsan orci consectetur sed. Sed a rutrum quam, sed convallis odio. Nullam in purus ac enim luctus maximus. Nunc ultrices odio enim, at malesuada nibh tincidunt sed. Duis a arcu fermentum, rutrum tortor in, ultricies enim.
        Ut velit diam, vestibulum ac porttitor non, ultricies sed justo. Vestibulum venenatis aliquam nunc, blandit sodales nunc sagittis nec. Duis nec posuere velit, pretium mattis diam. Vestibulum condimentum ante ut massa suscipit, a hendrerit massa aliquet. Cras et commodo turpis. Suspendisse dapibus et metus ut vestibulum. Sed non mattis velit. In sagittis purus ut dignissim imperdiet. Morbi lacinia sem porttitor gravida cursus.
        Ut in purus non metus fringilla ultrices id diam. Nam vel commodo felis. Cras eget ipsum luctus, gravida nisl at, porttitor ante. Pellentesque tincidunt eleifend leo ac iaculis. Proin tortor nibh, vehicula vitae commodo a, malesuada id lorem. Proin ornare erat ut purus feugiat, maximus hendrerit lorem tempus. In tincidunt aliquet est sed auctor. Proin vehicula libero eu consequat faucibus. Proin ornare lacus eget tortor condimentum pharetra.
        Pellentesque nec nunc nec velit imperdiet feugiat. Integer at sollicitudin quam, id vestibulum purus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Integer sit amet lacus eu diam ornare posuere. Sed quam est, lobortis porta finibus sit amet, rutrum sed magna. Phasellus dictum sagittis orci eget scelerisque. Curabitur ultricies lectus mauris, non imperdiet nisi rutrum ut. Aliquam iaculis vehicula maximus. Nullam risus sem, congue vel tellus eget, tristique imperdiet turpis. Integer eu leo vitae tortor efficitur condimentum. Nunc euismod justo sed ante scelerisque efficitur ut a dolor. In varius leo in nibh viverra, eu pulvinar lacus consectetur. Ut nibh ante, condimentum in nisi et, sagittis vulputate neque. Mauris ullamcorper sit amet mi ac facilisis. Maecenas sapien felis, porttitor egestas ullamcorper at, finibus ac nulla. </string>
    <string name="about">About</string>
    <string name="fragment_title_chats">Chats</string>
    <string name="fragment_title_about">About</string>
    <string name="image_description_logo">Logo</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="account">Account</string>
    <string name="settings">Settings</string>
    <string name="fragment_title_settings">Settings</string>
    <string name="fragment_title_account">Account</string>
    <string name="bio">Bio</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="write_about_yourself_hint">Write about yourself…</string>
    <string name="fragment_title_edit_bio">Edit bio</string>
    <string name="search">Search</string>
    <string name="send_button">Send button</string>
    <string name="clear_history">Clear history</string>
    <string name="private_chat">Private Chat</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
</resources>