<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_main"
    app:startDestination="@id/chatsFragment">

    <fragment
        android:id="@+id/chatsFragment"
        android:name="xyz.savvamirzoyan.trueithubtalks.ui.chats.ChatsFragment"
        android:label="@string/fragment_title_chats"
        tools:layout="@layout/fragment_chats">
        <action
            android:id="@+id/action_chatsFragment_to_searchFragment"
            app:destination="@id/searchFragment" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="xyz.savvamirzoyan.trueithubtalks.ui.about.AboutFragment"
        android:label="@string/fragment_title_about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/accountFragment"
        android:name="xyz.savvamirzoyan.trueithubtalks.ui.account.AccountFragment"
        android:label="@string/fragment_title_account"
        tools:layout="@layout/fragment_account" />
    <fragment
        android:id="@+id/searchFragment"
        android:name="xyz.savvamirzoyan.trueithubtalks.ui.search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" />
</navigation>